@@ -15,17 +15,15 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
-@RequestMapping("/patient")   // ONE base-path – patient version mounts here
+@RequestMapping("/patient")
 public class SensorDashboardController {
 
     @Autowired private SensorDataService sensorDataService;
     @Autowired private PatientService    patientService;
 
-    /* ────────────────────────────────────────────────────────────────
-       PATIENT route → /patient/sensorDashboard
-       ──────────────────────────────────────────────────────────────── */
     @GetMapping("/sensorDashboard")
     public String patientSensorDashboard(
             @RequestParam(value = "patientId", required = false) String patientIdParam,
@@ -33,24 +31,19 @@ public class SensorDashboardController {
             @RequestParam(value = "filterDate", required = false)   String filterDate,
             Model model) throws Exception {
 
-        // delegate to shared method (role = "patient")
         return buildDashboard(patientIdParam, "patient", page, filterDate, model);
     }
 
-    /* =================================================================
-       SHARED IMPLEMENTATION – made PUBLIC so DoctorController can call
-       ================================================================= */
     public String buildDashboard(String patientIdParam,
                                  String role,
                                  int    page,
                                  String filterDate,
                                  Model  model) throws Exception {
 
-        /* 1️⃣  Who is the patient? */
         String patientId;
         if (patientIdParam != null && !patientIdParam.isEmpty()) {
-            patientId = patientIdParam;                       // doctor/admin view
-        } else {                                              // logged-in patient
+            patientId = patientIdParam;
+        } else {
             Authentication auth  = SecurityContextHolder.getContext().getAuthentication();
             MyUserDetails user   = (MyUserDetails) auth.getPrincipal();
             patientId            = user.getUsername();
@@ -59,9 +52,8 @@ public class SensorDashboardController {
         Patient patient = patientService.getPatientById(patientId);
         model.addAttribute("patient",   patient);
         model.addAttribute("patientid", patientId);
-        model.addAttribute("role",      role);                // back-button support
+        model.addAttribute("role",      role);
 
-        /* 2️⃣  No sensor yet */
         if (patient.getSensorDataId() == null || patient.getSensorDataId().isEmpty()) {
             model.addAttribute("sensorData",         null);
             model.addAttribute("sensorDataPage",     null);
@@ -71,7 +63,6 @@ public class SensorDashboardController {
             return "sensorDashboard";
         }
 
-        /* 3️⃣  Load sensor + history */
         SensorData sensorData = sensorDataService.getSensorById(patient.getSensorDataId());
         model.addAttribute("sensorData", sensorData);
 
@@ -83,22 +74,19 @@ public class SensorDashboardController {
             return "sensorDashboard";
         }
 
-        /* 4️⃣  Prepare history list (max 50, newest first) */
         List<HistorySensorData> history = sensorData.getHistory()
-                                                   .stream()
-                                                   .sorted((a, b) -> b.getTimestamp().compareTo(a.getTimestamp()))
-                                                   .limit(50)
-                                                   .toList();
+                .stream()
+                .sorted((a, b) -> b.getTimestamp().compareTo(a.getTimestamp()))
+                .limit(50)
+                .collect(Collectors.toList());
 
-        /* 5️⃣  Optional date-filter */
         if (filterDate != null && !filterDate.isEmpty()) {
             history = history.stream()
-                             .filter(h -> h.getTimestamp().toString().startsWith(filterDate))
-                             .toList();
+                    .filter(h -> h.getTimestamp().toString().startsWith(filterDate))
+                    .collect(Collectors.toList());
             model.addAttribute("filterDate", filterDate);
         }
 
-        /* 6️⃣  Pagination */
         int pageSize = 5;
         int start    = Math.max(0, (page - 1) * pageSize);
         int end      = Math.min(start + pageSize, history.size());
@@ -106,11 +94,10 @@ public class SensorDashboardController {
         model.addAttribute("sensorDataPage", history.subList(start, end));
         model.addAttribute("currentPage",    page);
         model.addAttribute("totalPages",
-                           (int) Math.ceil((double) history.size() / pageSize));
+                (int) Math.ceil((double) history.size() / pageSize));
 
-        /* 7️⃣  Spark-line / chart (latest 5) */
         model.addAttribute("latestFiveReadings",
-                           history.stream().limit(5).toList());
+                history.stream().limit(5).collect(Collectors.toList()));
 
         return "sensorDashboard";
     }
